--- a/style.css
+++ b/style.css
@@ -1,47 +1,45 @@
 body{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    height: 100vh;
-    background: linear-gradient(#25ff5f, #0cd943 50%, #fff 50%);
 }
 
 .container{
-    background-color: #fff;
-    width: 90vw;
+    width: 860px;
     font-size: 16px;
-    max-width: 28em;
-    padding: 3em;
+    max-width: 450px;
+    padding: 48px;
     position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
-    box-shadow: 0 0 3.2em rgba(1, 3, 29, 0.2);
-    border-radius: 0.6em;
+    box-shadow: 0 0 51px rgba(1, 3, 29, 0.2);
+    border-radius: 10px;
 }
 
 h2{
-    font-size: 2em;
+    font-size: 30px;
     text-align: center;
-    margin-bottom: 1.5em;
+    margin-bottom: 24px;
+    font-family: 'Cherry Bomb One', cursive;
 }
 
 .input-wrapper input{
     display: block;
-    width: 100%;
-    font-size: 1.35em;
-    padding: 0.4em;
+    width: 95%;
+    font-size: 20px;
+    padding: 10px;
     border: 1px solid #a0a0a0;
-    border-radius: 0.2em;
+    border-radius: 4px;
 }
 
 .input-wrapper label{
     display: block;
-    font-size: 1.1em;
+    font-size: 20px;
     font-weight: 600;
-    margin-bottom: 0.25em;
+    margin-bottom: 4px;
+    font-family: 'Ruwudu', serif;
 }
 
 .input-wrapper:not(:last-child) {
-    margin-bottom: 0.25em;
+    margin-bottom: 4px;
 }
