--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     left: 50%;
     box-shadow: 0 0 51px rgba(1, 3, 29, 0.2);
     border-radius: 10px;
+    background: #fff;
 }
 
 h2{
@@ -21,6 +22,11 @@ h2{
     text-align: center;
     margin-bottom: 24px;
     font-family: 'Cherry Bomb One', cursive;
+}
+
+html {
+    background-image: url("/background.jpg");
+    background-size: cover;
 }
 
 .input-wrapper input{
